--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@typescript-eslint/parser": "^5.10.1",
 		"dotenv": "^14.3.2",
 		"eslint": "^8.7.0",
+		"node-fetch": "^2.6.7",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.5"
 	},
